fixed broken layout

--- a/content/css/core.css
+++ b/content/css/core.css
@@ -326,11 +326,19 @@ input.file {
     text-align: right;
 }
 
-.imagearea{
+.create-imagearea{
     position: relative;
 }
 
-.imagearea div.progress-container{
+.imagearea{
+    position: relative;
+    float: right;
+    text-align: right;
+}
+
+
+.imagearea div.progress-container,
+.create-imagearea div.progress-container{
 
     position: absolute;
     width: 68%;
@@ -426,6 +434,9 @@ span.progress{
 }
 
 
+.achievement-info #achievement-container{
+    margin: 40px 0% 10px 0%;
+}
 
 .create-achievement{
     margin: 10px 5% 10px 5%;
